# ACC

./: .coveragerc  .gitattributes  .gitignore  .pre-commit-config.yaml  ACC_Algorithm_Overview.md  BUILDING.md  BUILD_FIX_README.txt  BUILD_INSTRUCTIONS.md  CHANGELOG.md  CLAUDE.md  HANDOFF.md  INSTALL_PYQT5.md  LICENSE  MATPLOTLIB_ISSUE.md  Makefile  PYQT5_CONVERSION_SUMMARY.txt  README.md  SETUP_PYTHON311.md  STRUCTURE.md  TROUBLESHOOT_PYQT5.md  USER_MANUAL.md  acc_core.py  acc_core_acc2.py  acc_core_new.py  acc_core_tree.py  acc_gui.py  acc_render_paper.py  acc_utils.py  analyze_levels.py  build.py  build_debug.bat  build_exe.bat  build_onedir.bat  build_onefile.bat  build_pyqt5.bat  build_with_spec.bat  check_pyqt5_details.py  check_versions.py  clustering_steps.py  convert_to_pyqt5.py  (+29 more)
.github/workflows/: build.yml  generate_docs.yml  manual-release.yml  release.yml  reusable_build.yml  test.yml
InnoSetup/: ACC.iss.template
data/: ordovician_global.csv  sample_global.csv  sample_global1.csv  sample_global2.csv  sample_global3.csv  sample_local1.csv  sample_local2.csv  sample_local3.csv  sample_local4.csv  sample_subordinate.csv  simpson_arenig_global.csv  simpson_arenig_local.csv  simpson_caradoc_global.csv  simpson_caradoc_local.csv  simpson_llanvirn_local.csv  simpson_tremadoc_global.csv  simpson_tremadoc_local.csv
devlog/: 20251111_P01_PyQt6_GUI_구현계획.md  20251111_P02_3단계_워크플로우_구현.md  20251111_P03_3컬럼_레이아웃_구현.md  20251111_P04_단계별_클러스터링_시각화.md  20251111_P05_덴드로그램_에러_수정.md  20251111_P06_매트릭스_표시_개선.md  20251111_P07_병합_미리보기_애니메이션.md  20251111_P08_레이아웃_개선_및_Similarity_표시.md  20251111_P09_덴드로그램_방향_수정.md  20251111_P10_Distance_기반으로_복원.md  20251111_P11_X축_표기만_Similarity로_변경.md  20251111_P12_노드에_Similarity_값_표시.md  20251111_P13_소수점_자리수_통일.md  20251111_P14_하이라이트_색상_및_타이밍_조정.md  20251111_P15_병합_후_올바른_위치_하이라이트.md  20251111_P16_ACC_동심원_시각화_문제_분석.md  20251111_P17_ACC_동심원_시각화_구현.md  20251111_P18_GUI_레이아웃_개선_및_동심원_수정.md  20251112_P19_Matrix_편집_제한_및_Area_List_관리.md  20251112_P20_ACC_단계별_시각화.md  20251112_P21_ACC_알고리즘_재설계.md  20251112_P22_PyQt5_변환_및_환경_최적화.md  20251112_P23_ACC_공식_수정.md  20251113_P24_동심원_보존_및_회전_기반_병합_구현.md  20251113_P25_ACC2_개발계획.md  20251113_P26_ACC2_interactive_features.md  20251115_P27_사용자_매뉴얼_및_UX_개선.md  20251115_P28_테스트_체계화_계획.md  20251115_P29_CICD_빌드_배포_계획.md  20251116_P30_버전관리_및_PDF_문서화_개선.md  20251117_P31_ACC2_ACC1_Style_및_UX_개선.md  20251118_P32_성능_최적화_및_Import_버그_수정.md  20251118_P33_ACC2_옵션_실시간_반영_및_스케일링_수정.md  20260211_037_Raw_Data_Panel_구현.md  20260211_038_유사도_계산_연동_구현.md  20260211_039_Undo_Redo_헤더드래그_구현.md  20260211_040_다양한_Similarity_Index_지원_구현.md  20260211_041_Similarity_Index_4종_고정_및_Raup_Crick_구현.md  20260211_042_NMDS_Panel_추가.md  20260211_043_패널_Show_Hide_토글.md  (+21 more)
doc/: ACC_Algorithm_Overview.md  PDF_GENERATION.md  QA_SETUP_SUMMARY.md  README.md  USER_MANUAL.md  VERSION_MANAGEMENT.md  development.md  latex_header.tex
doc/images/: README.md
docs/: advanced_features.rst  basic_usage.rst  changelog.rst  conf.py  data_format.rst  faq.rst  getting_started.rst  index.rst  installation.rst  requirements.txt  troubleshooting.rst  visualization.rst
examples/: README.md  concentric_circles_example.py  simple_abc_example.py  verify_6_areas.py
packaging/linux/: create_appimage.sh
reference/: distance.txt
scripts/: generate_pdf.py
tests/: conftest.py
tests/gui/: test_acc_gui.py
tests/integration/: test_pipeline.py
tests/legacy/: README.md  test_acc_steps.py  test_acc_with_log.py  test_area_editor.py  test_clustering_steps.py  test_dialog.py  test_empty_area_list.py  test_gui_simple.py  test_integration.py  test_linkage_abc.py  test_matplotlib_qt5.py  test_merge_radii.py  test_nested_structure.py  test_step_dendro.py
tests/test_data/: sample_error.csv  sample_local.csv
tests/unit/: test_acc_core.py  test_acc_core_new.py  test_acc_core_tree.py  test_acc_render_paper.py  test_acc_utils.py
