# pyproject.toml for ACC (Adaptive Cluster Circle)
# Project configuration and tool settings

[project]
name = "ACC"
version = "0.0.3"
description = "Area Affinity in Concentric Circles - Hierarchical cluster visualization"
authors = [
    {name = "jikhanjung"}
]
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
keywords = ["clustering", "visualization", "dendrogram", "hierarchy"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Visualization",
]

dependencies = [
    "PyQt5>=5.15.0",
    "PyQt5-sip>=12.12.0",
    "numpy>=2.0.0",
    "scipy>=1.11.0",
    "pandas>=2.0.0",
    "matplotlib>=3.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.0",
    "pytest-cov>=7.0.0",
    "pytest-qt>=4.5.0",
    "pytest-timeout>=2.3.0",
    "coverage[toml]>=7.10.0",
    "ruff>=0.13.0",
    "pre-commit>=4.0.0",
]

build = [
    "pyinstaller>=5.13.0",
]

[project.urls]
Homepage = "https://github.com/jikhanjung/ACC"
Repository = "https://github.com/jikhanjung/ACC"
Issues = "https://github.com/jikhanjung/ACC/issues"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

# Ruff configuration - Fast Python linter and formatter
[tool.ruff]
target-version = "py311"
line-length = 120

# Enable preview features
preview = true

[tool.ruff.lint]
# Select rules to enable
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort (import sorting)
    "N",   # pep8-naming
    "UP",  # pyupgrade (Python version upgrades)
    "B",   # flake8-bugbear (common bugs)
    "C4",  # flake8-comprehensions
    "DTZ", # flake8-datetimez
    "ICN", # flake8-import-conventions
    "PIE", # flake8-pie
    "PT",  # flake8-pytest-style
    "RSE", # flake8-raise
    "RET", # flake8-return
    "SIM", # flake8-simplify
    "ARG", # flake8-unused-arguments
]

# Ignore specific rules
ignore = [
    "E501",   # Line too long (handled by formatter)
    "B008",   # Do not perform function calls in argument defaults
    "B905",   # zip strict parameter (Python 3.10+)
    "ARG001", # Unused function argument (common in Qt callbacks)
    "ARG002", # Unused method argument
    "PT011",  # pytest.raises too broad
    "SIM108", # Use ternary operator (sometimes less readable)
]

[tool.ruff.lint.per-file-ignores]
# Test files
"tests/**/*.py" = [
    "ARG001",  # Unused function arguments (fixtures)
    "ARG002",  # Unused method arguments
    "PT001",   # Use @pytest.fixture
    "PT004",   # Fixture does not return
    "PT023",   # Use @pytest.mark
]

# GUI file - allow Qt naming conventions
"acc_gui.py" = [
    "N802",   # Function name should be lowercase (Qt uses camelCase)
    "N803",   # Argument name should be lowercase
    "N806",   # Variable in function should be lowercase
    "N815",   # Variable in class scope should not be mixedCase
]

# Examples and scripts
"examples/**/*.py" = ["T201"]  # print statements allowed
"scripts/**/*.py" = ["T201"]   # print statements allowed

# Build and packaging
"build.py" = ["T201"]
"setup.py" = ["D", "T201"]

[tool.ruff.lint.isort]
known-first-party = ["acc_core", "acc_utils", "acc_gui", "version"]
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder"
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

# Coverage configuration (alternative to .coveragerc)
[tool.coverage.run]
source = ["."]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/build/*",
    "*/dist/*",
    "*/__pycache__/*",
    "*/.pytest_cache/*",
    "*/htmlcov/*",
    "*/devlog/*",
    "*/docs/*",
    "*/.github/*",
    "version.py",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_empty = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self\\.debug",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if False:",
    "if __name__ == .__main__.:",
    "@(abc\\.)?abstractmethod",
    "if TYPE_CHECKING:",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"

# Pytest configuration (can also be in pytest.ini)
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=.",
    "--cov-report=html",
    "--cov-report=term-missing",
    "--cov-report=xml",
]
markers = [
    "unit: Fast, isolated unit tests",
    "integration: Integration tests (may use files or data)",
    "gui: GUI tests (require Qt application)",
    "slow: Slow running tests (>1s)",
    "performance: Performance benchmarking tests",
    "visualization: Tests that generate visualizations",
    "algorithm: Core algorithm tests (acc_core.py)",
    "utils: Utility function tests (acc_utils.py)",
    "io: File I/O tests (CSV loading, etc.)",
]
